# ya-reviews-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/ya_reviews_mcp/: __init__.py  exceptions.py
src/ya_reviews_mcp/reviews/: config.py  models.py  scraper.py
src/ya_reviews_mcp/reviews/backends/: __init__.py  base.py  patchright_backend.py  playwright_backend.py  remote_backend.py
src/ya_reviews_mcp/reviews/fetchers/: base.py  fetcher.py  reviews.py
src/ya_reviews_mcp/servers/: context.py  dependencies.py  main.py  tools.py
src/ya_reviews_mcp/utils/: decorators.py  lifecycle.py  logging.py
tests/unit/: test_config.py  test_models.py  test_scraper.py  test_server.py
tests/unit/test_backends/: test_base.py  test_factory.py  test_patchright_backend.py  test_playwright_backend.py  test_remote_backend.py
tests/unit/test_fetchers/: test_base.py  test_reviews.py
